style: change phone icon

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -4755,7 +4755,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -5584,7 +5584,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -6436,7 +6436,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -6734,7 +6734,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -7031,7 +7031,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -7383,7 +7383,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -7736,7 +7736,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -8088,7 +8088,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -8440,7 +8440,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -8792,7 +8792,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
@@ -9149,7 +9149,7 @@
                                 data-bs-placement="top"
                                 title="Start a Call"
                               >
-                                <span class="fas fa-phone"></span>
+                                <span class="fas fa-phone-alt"></span>
                               </button>
                               <button
                                 class="btn btn-sm btn-falcon-primary me-2"
