style: trigger button padding

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -3865,7 +3865,7 @@
             <div>
               <div>
                 <button
-                  class="btn border-none outline-none shadow-none inbox-menu-trigger"
+                  class="btn border-none outline-none shadow-none px-0 inbox-menu-trigger"
                   type="button"
                   data-bs-toggle="offcanvas"
                   data-bs-target="#inbox-menu"
