styled: scrollbar for main, side panel , customize panel , and inbox panel

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -84,7 +84,7 @@
       <!-- ===============================================-->
       <!--    Main Content-->
       <!-- ===============================================-->
-      <main class="main" id="top">
+      <main class="main scrollbar" id="top">
         <!-- vertical side bar -->
         <!-- <nav class="d-lg-none navbar navbar-vertical navbar-expand-xl navbar-light">
           <div class="collapse navbar-collapse">
@@ -3584,7 +3584,7 @@
         </ul>
       </nav>
 
-      <aside id="left-content" class="d-grid left-sidebar-container">
+      <aside id="left-content" class="scrollbar d-grid left-sidebar-container">
         <article
           class="position-relative customize-article p-0 settings-panel border-0"
           id="settings-offcanvas"
@@ -4128,7 +4128,7 @@
             <!-- the inbox overview - all conversation panel  -->
             <section id="all-inbox" class="active-inbox-panel panel-show-nav py-0 overflow-y-auto">
               <nav aria-label="messages inbox">
-                <ul class="inbox-list list-unstyled overflow-y-scroll p-2">
+                <ul class="inbox-list list-unstyled scrollbar overflow-y-scroll p-2">
                   <li>
                     <a style="display: contents" class="" href="#chat-message">
                       <div class="d-flex p-3">
