fix: minor main content bugs

--- a/public/pages/projectdetails.html
+++ b/public/pages/projectdetails.html
@@ -1543,7 +1543,7 @@
                           </div>
 
                           <div class="row mt-3 reverse-columns">
-                            < class="col-lg-6">
+                            <div class="col-lg-6 col-xxl-7">
                               <div class="row-items align-items-center">
                                 <div class="header ls text-uppercase" id="item-desc-header">Item Description</div>
                                 <button
@@ -1675,7 +1675,7 @@
                                 </p>
                               </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 col-xxl-5">
                               <div class="row-items align-items-center">
                                 <div class="header ls text-uppercase">Custom Fields</div>
                                 <button
@@ -3464,7 +3464,7 @@
               </div>
             </div>
           </div>
-        <!-- </div> -->
+        </div>
       </main>
       <!-- ===============================================-->
       <!--    End of Main Content-->
